# notifications_service

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  env_example.txt  pyproject.toml
config/: settings.py  urls.py
notifications/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  validators.py  views.py
notifications/management/commands/: csu.py
notifications/migrations/: 0001_initial.py
tests/: test_views.py
